<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_title"
            style="@style/page_header_style"
            tools:text="Movie name" />

        <TextView
            android:id="@+id/rating_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label_style"
            android:text="@string/rating_text" />

        <EditText
            android:id="@+id/edit_rating"
            style="@style/inputTextStyle"
            android:autofillHints="edit rating"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/provider_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label_style"
            android:text="@string/provider_text" />

        <EditText
            android:id="@+id/edit_provider"
            style="@style/inputTextStyle"
            android:autofillHints="edit provider"
            tools:ignore="LabelFor"/>

        <TextView
            android:id="@+id/review_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label_style"
            android:text="@string/review_text" />

        <EditText
            android:id="@+id/edit_review"
            style="@style/inputTextStyle"
            android:autofillHints="edit rating"
            tools:ignore="LabelFor"/>

        <Button
            android:id="@+id/edit_done_button"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:gravity="bottom|end"
            android:text="@string/done_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>


</ScrollView>